--- a/src/editor.html
+++ b/src/editor.html
@@ -1027,13 +1027,17 @@
 			zss_editor.getCaretYPosition = function() {
 				var sel = window.getSelection();
 				// Next line is comented to prevent deselecting selection. It looks like work but if there are any issues will appear then uconmment it as well as code above.
-				//sel.collapseToStart();
+				// sel.collapseToStart();
+				if (!sel.rangeCount) {
+					return 0;
+				}
 				var range = sel.getRangeAt(0);
 				var span = document.createElement('span');// something happening here preventing selection of elements
 				range.collapse(false);
 				range.insertNode(span);
 				var topPosition = span.offsetTop;
 				span.parentNode.removeChild(span);
+				console.log("topPosition: ", topPosition);
 				return topPosition;
 			}
 
@@ -1523,18 +1527,18 @@
 
 					// Background Color
 					var bgColor = t.css('backgroundColor');
-					if (bgColor.length != 0 && bgColor != 'rgba(0, 0, 0, 0)' && bgColor != 'rgb(0, 0, 0)' && bgColor != 'transparent') {
+					if (bgColor && bgColor.length != 0 && bgColor != 'rgba(0, 0, 0, 0)' && bgColor != 'rgb(0, 0, 0)' && bgColor != 'transparent') {
 						items.push('backgroundColor');
 					}
 					// Text Color
 					var textColor = t.css('color');
-					if (textColor.length != 0 && textColor != 'rgba(0, 0, 0, 0)' && textColor != 'rgb(0, 0, 0)' && textColor != 'transparent') {
+					if (textColor && textColor.length != 0 && textColor != 'rgba(0, 0, 0, 0)' && textColor != 'rgb(0, 0, 0)' && textColor != 'transparent') {
 						items.push('textColor');
 					}
 
 					//Fonts
 					var font = t.css('font-family');
-					if (font.length != 0 && font != 'Arial, Helvetica, sans-serif') {
+					if (font && font.length != 0 && font != 'Arial, Helvetica, sans-serif') {
 						items.push('fonts');
 					}
 
@@ -1698,8 +1702,6 @@
 			}
 
 			#zss_editor_content {
-				padding-left: 10px;
-				padding-right: 10px;
 			}
 
 			div.zss_editor_title {
