--- a/src/editor.html
+++ b/src/editor.html
@@ -884,6 +884,15 @@
 				clearHtmlIfTextIsEmpty('zss_editor_title');
 				clearHtmlIfTextIsEmpty('zss_editor_content');
 
+				$(document).on('selectionchange',function(e){
+					if (!zss_editor.isDragging) {
+						zss_editor.calculateEditorHeightWithCaretPosition();
+					};
+					zss_editor.setScrollPosition();
+					zss_editor.enabledEditingItems(e);
+					notifyIfSelectedTextHasChanged();
+				});
+
 				// Make sure that when we tap anywhere in the document we focus on the editor
 				$(window).on('touchmove', function(e) {
 					zss_editor.isDragging = true;
@@ -908,6 +917,8 @@
 
 				whenPastingInsertAsPlainText('zss_editor_title');
 				whenPastingInsertAsPlainText('zss_editor_content');
+
+				// zss_editor.focusTitle();
 
 				setTimeout(function() {
 					WebViewBridge.send(JSON.stringify({type: 'ZSS_INITIALIZED'}))
@@ -1017,17 +1028,13 @@
 			zss_editor.getCaretYPosition = function() {
 				var sel = window.getSelection();
 				// Next line is comented to prevent deselecting selection. It looks like work but if there are any issues will appear then uconmment it as well as code above.
-				// sel.collapseToStart();
-				if (!sel.rangeCount) {
-					return 0;
-				}
+				//sel.collapseToStart();
 				var range = sel.getRangeAt(0);
 				var span = document.createElement('span');// something happening here preventing selection of elements
 				range.collapse(false);
 				range.insertNode(span);
 				var topPosition = span.offsetTop;
 				span.parentNode.removeChild(span);
-				console.log("topPosition: ", topPosition);
 				return topPosition;
 			}
 
@@ -1517,18 +1524,18 @@
 
 					// Background Color
 					var bgColor = t.css('backgroundColor');
-					if (bgColor && bgColor.length != 0 && bgColor != 'rgba(0, 0, 0, 0)' && bgColor != 'rgb(0, 0, 0)' && bgColor != 'transparent') {
+					if (bgColor.length != 0 && bgColor != 'rgba(0, 0, 0, 0)' && bgColor != 'rgb(0, 0, 0)' && bgColor != 'transparent') {
 						items.push('backgroundColor');
 					}
 					// Text Color
 					var textColor = t.css('color');
-					if (textColor && textColor.length != 0 && textColor != 'rgba(0, 0, 0, 0)' && textColor != 'rgb(0, 0, 0)' && textColor != 'transparent') {
+					if (textColor.length != 0 && textColor != 'rgba(0, 0, 0, 0)' && textColor != 'rgb(0, 0, 0)' && textColor != 'transparent') {
 						items.push('textColor');
 					}
 
 					//Fonts
 					var font = t.css('font-family');
-					if (font && font.length != 0 && font != 'Arial, Helvetica, sans-serif') {
+					if (font.length != 0 && font != 'Arial, Helvetica, sans-serif') {
 						items.push('fonts');
 					}
 
@@ -1635,15 +1642,6 @@
 
 			zss_editor.setPlatform = function(platform) {
 				zss_editor.platform = platform;
-				if (platform === 'ios') {
-					$(document).on('selectionchange',function(e){
-						// console.log('selectionchange');
-						zss_editor.calculateEditorHeightWithCaretPosition();
-						zss_editor.setScrollPosition();
-						zss_editor.enabledEditingItems(e);
-						notifyIfSelectedTextHasChanged();
-					});
-				}
 			}
 
 			//end
@@ -1701,6 +1699,8 @@
 			}
 
 			#zss_editor_content {
+				/*padding-left: 10px;*/
+				/*padding-right: 10px;*/
 			}
 
 			div.zss_editor_title {
@@ -1711,6 +1711,7 @@
 			}
 
 			#zss_editor_title {
+				display: none;
 				padding-left: 10px;
 				padding-right: 10px;
 			}
@@ -1732,6 +1733,7 @@
 			}
 
 			#separatorContainer {
+				display: none;
 				-webkit-user-select: none;
 				padding-left: 10px;
 				padding-right: 10px;
